--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-Hello world
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>Black Door</title>
+
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <a href="#" class="nombre-izquierda">Black Door</a>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="html/ciberseguridad.html">Ciberseguridad</a></li>
+                <li><a href="html/linux.html">Linux</a></li>
+                <li><a href="html/programacion.html">Programación</a></li>
+                <li><a href="html/acerca_de.html">Acerca de</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <div class="main-desc">
+
+            <div class="desc">
+                <h2>¿Qué es Black Door?</h2>
+                <br><br>
+                <p>
+                    Black Door es un blog donde se tratará de explicar de la manera más simple y entendible posible temas de ciberseguridad que aprendo a lo largo de mis estudios. Los principales temas que trataré en este blog son:
+                </p>
+                <br>
+                <div class="lista-temas">
+                    <ul>
+                        <li>Pentesting</li>
+                        <li>Linux</li>
+                        <li>Programación</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </main>
+</body>
+</html>
